// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LogsContent /> tests DefaultConsoleViewStepDetails snapshot test 1`] = `
<div>
  <div
    class="logViewer"
  >
    <div
      class="main"
      data-mode="console-view"
    >
      <div
        class="header"
      >
        <div>
          execution.consoleLogs
        </div>
        <div
          class="rhs"
        >
          <div
            class="bp3-input-group ui-search-box ExpandingSearchInput--main search ExpandingSearchInput--flip  ExpandingSearchInput--dark"
            data-name=""
          >
            <span
              class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey200"
              data-icon="thinner-search"
            >
              <svg
                fill="none"
                height="14"
                viewBox="0 0 16 16"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
            </span>
            <input
              class="bp3-input  ExpandingSearchInput--find"
              dir="auto"
              placeholder="Search"
              style="padding-right: 0px;"
              type="search"
              value=""
            />
          </div>
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
            type="button"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="full-screen"
            >
              <svg
                fill="none"
                height="22"
                viewBox="0 0 24 24"
                width="22"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.12 19.512h4.876v-4.815M8.88 19.512H4.003v-4.815M15.12 4.488h4.876v4.814M8.88 4.488H4.003v4.814"
                  stroke="currentColor"
                  stroke-linecap="round"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <pre
        class="container"
      >
        <div
          class="noLogs"
        >
          common.logs.noLogsText
        </div>
      </pre>
    </div>
  </div>
</div>
`;

exports[`<LogsContent /> tests Logs test GroupedLogs 1`] = `
<div>
  <div
    class="main"
    data-mode="console-view"
  >
    <div
      class="header"
    >
      <div>
        execution.consoleLogs
      </div>
      <div
        class="rhs"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search ExpandingSearchInput--flip  ExpandingSearchInput--dark"
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey200"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--find"
            dir="auto"
            placeholder="Search"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="full-screen"
          >
            <svg
              fill="none"
              height="22"
              viewBox="0 0 24 24"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.12 19.512h4.876v-4.815M8.88 19.512H4.003v-4.815M15.12 4.488h4.876v4.814M8.88 4.488H4.003v4.814"
                stroke="currentColor"
                stroke-linecap="round"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div>
      Grouped logs
    </div>
  </div>
</div>
`;

exports[`<LogsContent /> tests Logs test SingleSectionLogs 1`] = `
<div>
  <div
    class="main"
    data-mode="console-view"
  >
    <div
      class="header"
    >
      <div>
        execution.consoleLogs
      </div>
      <div
        class="rhs"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search ExpandingSearchInput--flip  ExpandingSearchInput--dark"
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey200"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--find"
            dir="auto"
            placeholder="Search"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="full-screen"
          >
            <svg
              fill="none"
              height="22"
              viewBox="0 0 24 24"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.12 19.512h4.876v-4.815M8.88 19.512H4.003v-4.815M15.12 4.488h4.876v4.814M8.88 4.488H4.003v4.814"
                stroke="currentColor"
                stroke-linecap="round"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div>
      Single section logs
    </div>
  </div>
</div>
`;

exports[`<LogsContent /> tests console-view error message test 1`] = `
<div>
  <div
    class="main hasErrorMessage"
    data-mode="console-view"
  >
    <div
      class="header"
    >
      <div>
        execution.consoleLogs
      </div>
      <div
        class="rhs"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search ExpandingSearchInput--flip  ExpandingSearchInput--dark"
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey200"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--find"
            dir="auto"
            placeholder="Search"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="full-screen"
          >
            <svg
              fill="none"
              height="22"
              viewBox="0 0 24 24"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.12 19.512h4.876v-4.815M8.88 19.512H4.003v-4.815M15.12 4.488h4.876v4.814M8.88 4.488H4.003v4.814"
                stroke="currentColor"
                stroke-linecap="round"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <pre
      class="container"
    >
      <div
        class="noLogs"
      >
        common.logs.noLogsText
      </div>
    </pre>
    <div
      class="errorMessage"
    >
      <div
        class="summary"
      >
        summary
      </div>
      <div
        class="error"
      >
        <span
          class="bp3-icon StyledProps--main"
          data-icon="circle-cross"
        >
          <svg
            height="16"
            viewBox="0 0 13 13"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M0.166687 6.5013C0.166687 9.99911 3.00222 12.8346 6.50002 12.8346C9.99782 12.8346 12.8334 9.99911 12.8334 6.5013C12.8334 3.0035 9.99782 0.167969 6.50002 0.167969C3.00222 0.167969 0.166687 3.0035 0.166687 6.5013ZM4.23841 3.498L6.49799 5.76096L8.76198 3.49767C9.25705 3.00275 9.99831 3.74646 9.50325 4.24137L7.23992 6.504L9.49411 8.76157C9.98873 9.25693 9.2468 9.99996 8.75218 9.5046L6.49732 7.24638L4.23807 9.50494C3.74301 9.99985 3.00174 9.25615 3.49681 8.76123L5.75539 6.50334L3.49648 4.24104C3.00186 3.74568 3.74379 3.00264 4.23841 3.498Z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main"
          style="--text-line-clamp: 1;"
        >
          This is an error message
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<LogsContent /> tests console-view snapshot test 1`] = `
<div>
  <div
    class="main"
    data-mode="console-view"
  >
    <div
      class="header"
    >
      <div>
        execution.consoleLogs
      </div>
      <div
        class="rhs"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search ExpandingSearchInput--flip  ExpandingSearchInput--dark"
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey200"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--find"
            dir="auto"
            placeholder="Search"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="full-screen"
          >
            <svg
              fill="none"
              height="22"
              viewBox="0 0 24 24"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.12 19.512h4.876v-4.815M8.88 19.512H4.003v-4.815M15.12 4.488h4.876v4.814M8.88 4.488H4.003v4.814"
                stroke="currentColor"
                stroke-linecap="round"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <pre
      class="container"
    >
      <div
        class="noLogs"
      >
        common.logs.noLogsText
      </div>
    </pre>
  </div>
</div>
`;

exports[`<LogsContent /> tests console-view warning message test 1`] = `
<div>
  <div
    class="main hasErrorMessage"
    data-mode="console-view"
  >
    <div
      class="header"
    >
      <div>
        execution.consoleLogs
      </div>
      <div
        class="rhs"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search ExpandingSearchInput--flip  ExpandingSearchInput--dark"
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey200"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--find"
            dir="auto"
            placeholder="Search"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="full-screen"
          >
            <svg
              fill="none"
              height="22"
              viewBox="0 0 24 24"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.12 19.512h4.876v-4.815M8.88 19.512H4.003v-4.815M15.12 4.488h4.876v4.814M8.88 4.488H4.003v4.814"
                stroke="currentColor"
                stroke-linecap="round"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <pre
      class="container"
    >
      <div
        class="noLogs"
      >
        common.logs.noLogsText
      </div>
    </pre>
    <div
      class="errorMessage isWarning"
    >
      <div
        class="summary"
      >
        summary
      </div>
      <div
        class="error"
      >
        <span
          class="bp3-icon bp3-icon-warning-sign StyledProps--main"
          icon="warning-sign"
        >
          <svg
            data-icon="warning-sign"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              warning-sign
            </desc>
            <path
              d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main"
          style="--text-line-clamp: 1;"
        >
          This is a warning message
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`<LogsContent /> tests step-details snapshot test 1`] = `
<div>
  <div
    class="main"
    data-mode="step-details"
  >
    <div
      class="header"
    >
      <div>
        execution.stepLogs
      </div>
      <div
        class="rhs"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search ExpandingSearchInput--flip  ExpandingSearchInput--dark"
          data-name=""
        >
          <span
            class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey200"
            data-icon="thinner-search"
          >
            <svg
              fill="none"
              height="14"
              viewBox="0 0 16 16"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </span>
          <input
            class="bp3-input  ExpandingSearchInput--find"
            dir="auto"
            placeholder="Search"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main fullScreen Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
          type="button"
        >
          <span
            class="bp3-icon StyledProps--main"
            data-icon="full-screen"
          >
            <svg
              fill="none"
              height="22"
              viewBox="0 0 24 24"
              width="22"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.12 19.512h4.876v-4.815M8.88 19.512H4.003v-4.815M15.12 4.488h4.876v4.814M8.88 4.488H4.003v4.814"
                stroke="currentColor"
                stroke-linecap="round"
              />
            </svg>
          </span>
        </button>
        <a
          class="toConsoleView"
          href="/"
        >
          <span>
            consoleView
          </span>
        </a>
      </div>
    </div>
    <pre
      class="container"
    >
      <div
        class="noLogs"
      >
        common.logs.noLogsText
      </div>
    </pre>
  </div>
</div>
`;
